# kme-btcrs

./: README.md  blockchain.cbor  flake.nix  key_priv.cbor  key_pub.pem  wallet_config.toml
lib/: Cargo.toml
lib/src/: crypto.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  akame_priv.cbor  akame_pub.pem
miner/src/: main.rs
node/: Cargo.toml
node/src/: handler.rs  main.rs  util.rs
wallet/: Cargo.toml
wallet/src/: core.rs  main.rs  tasks.rs  util.rs
