[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
btclib = { version = "0.1.0", path = "../lib" }
clap = { version = "4.5.50", features = ["derive"] }
crossbeam-skiplist = "0.1.3"
env_filter = "0.1.4"
futures = "0.3.31"
kanal = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
text-to-ascii-art = "=0.1.9"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
